--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,8 +52,7 @@ jobs:
           --wait --args "--timeout ${{ env.WAIT_FOR_PODS_READY_TIMEOUT }}" \
           --environment=${{ inputs.environment }} \
           --namespace=${{ inputs.namespace || steps.repo_warm_up.outputs.adhoc_namespace }} \
-          --set postrixImage.tag=${{ steps.repo_warm_up.outputs.git_hash }} \
-          --set variables.NAMESPACE=${{ inputs.namespace || steps.repo_warm_up.outputs.adhoc_namespace }}
+          --set postrixImage.tag=${{ steps.repo_warm_up.outputs.git_hash }}
 
       - name: Label namespace
         if: ${{ inputs.namespace_label }}
