--- a/.github/workflows/build-and-deploy-main.yml
+++ b/.github/workflows/build-and-deploy-main.yml
@@ -11,6 +11,20 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
+  db_migrate:
+    permissions:
+      contents: read
+      id-token: write
+
+    strategy:
+      matrix:
+        db: [cannon]
+
+    uses: ./.github/workflows/db-migrate.yml
+    with:
+      db: ${{ matrix.db }}
+    secrets: inherit
+
   build_and_push:
     permissions:
       contents: read
@@ -27,7 +41,7 @@ jobs:
     secrets: inherit
 
   deploy:
-    needs: build_and_push
+    needs: [db_migrate, build_and_push]
     
     permissions:
       contents: read
