--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -44,6 +44,8 @@ jobs:
             kubectl delete namespace $namespace
           done
 
+      # TODO: Add a step to delete the namespace db schema and expired schemas
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
