--- a/.github/workflows/db-migrate.yml
+++ b/.github/workflows/db-migrate.yml
@@ -10,6 +10,10 @@ on:
       db:
         required: true
         type: string
+      namespace:
+        required: false
+        description: 'The k8s namespace, which will also be used as the database schema name'
+        type: string
 
 jobs:
   db_migrate:
@@ -28,4 +32,4 @@ jobs:
 
       - name: DB Migrate
         working-directory: packages/cannon-db
-        run: DATABASE_URL='${{ secrets.DATABASE_INSTANCE_URL }}/${{ inputs.db }}?schema=${{ steps.repo_warm_up.outputs.adhoc_namespace }}' npm run migrate:deploy
+        run: DATABASE_URL='${{ secrets.DATABASE_INSTANCE_URL }}/${{ inputs.db }}?schema=${{ inputs.namespace || steps.repo_warm_up.outputs.adhoc_namespace }}' npm run migrate:deploy
