--- a/kubernetes/helmfile.yaml
+++ b/kubernetes/helmfile.yaml
@@ -56,6 +56,14 @@ releases:
     values:
       - ./external-dns/values/defaults.yaml
 
+  - name: postgresql
+    namespace: postgresql
+    chart: ./postgresql
+    labels:
+      app: postgresql
+    values:
+      - ./postgresql/values/defaults.yaml
+
   - name: redis
     namespace: redis
     chart: ./redis
