--- a/.github/workflows/db-migrate.yml
+++ b/.github/workflows/db-migrate.yml
@@ -26,10 +26,12 @@ jobs:
       - name: Repo Warm Up
         id: repo_warm_up
         uses: ./.github/actions/repo-warm-up
+        with:
+          namespace: ${{ inputs.namespace }}
 
       - name: Configure AWS credentials
         uses: ./.github/actions/aws-warm-up
 
       - name: DB Migrate
         working-directory: packages/cannon-db
-        run: DATABASE_URL='${{ secrets.DATABASE_INSTANCE_URL }}/${{ inputs.db }}?schema=${{ inputs.namespace || steps.repo_warm_up.outputs.adhoc_namespace }}' npm run migrate:deploy
+        run: DATABASE_URL='${{ secrets.DATABASE_INSTANCE_URL }}/${{ inputs.db }}?schema=${{ steps.repo_warm_up.outputs.namespace }}' npm run migrate:deploy
