--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,11 +29,13 @@
     "bitnami",
     "Capish",
     "Creatomate",
+    "datname",
     "Googlebot",
     "helmfile",
     "joby",
     "kubeconfig",
     "postrix",
+    "psql",
     "rabbitmq",
     "sealedbox",
     "toybuttons",
