--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -54,18 +54,6 @@ jobs:
               }
             }
 
-      - name: Delete PostgreSQL namespace schema
-        if: github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch'
-        run: |
-          # Get list of all databases except system databases
-          DATABASES=$(psql '${{ secrets.DATABASE_INSTANCE_URL }}' -At -c "SELECT datname FROM pg_database WHERE datname NOT IN ('postgres', 'template0', 'template1')")
-          
-          # Delete schema from all databases
-          for db in $DATABASES; do
-            echo "Cleaning up schema in database: $db"
-            psql '${{ secrets.DATABASE_INSTANCE_URL }}'"/$db" -c "DROP SCHEMA IF EXISTS \"${{ steps.repo_warm_up.outputs.namespace }}\" CASCADE;"
-          done
-
       - name: Delete adhoc namespace from PR
         if: github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch'
         run: |
@@ -82,7 +70,19 @@ jobs:
             kubectl delete namespace $namespace
           done
 
-      # TODO: Add a step to delete the namespace db schema and expired schemas
+      - name: Delete PostgreSQL namespace schema
+        if: github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch'
+        run: |
+          # Get list of all databases except system databases
+          DATABASES=$(psql '${{ secrets.DATABASE_INSTANCE_URL }}' -At -c "SELECT datname FROM pg_database WHERE datname NOT IN ('postgres', 'template0', 'template1')")
+          
+          # Delete schema from all databases
+          for db in $DATABASES; do
+            echo "Cleaning up schema in database: $db"
+            psql '${{ secrets.DATABASE_INSTANCE_URL }}'"/$db" -c "DROP SCHEMA IF EXISTS \"${{ steps.repo_warm_up.outputs.namespace }}\" CASCADE;"
+          done
+
+      # TODO: Add a step to delete the expired schemas if we missed any
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
