--- a/services/capish/Dockerfile
+++ b/services/capish/Dockerfile
@@ -1,11 +1,10 @@
-# Local Build: docker build --platform linux/arm64 -t yuvadius/capish:latest -f services/capish/Dockerfile .
-# Server Build: docker build --platform linux/amd64 -t yuvadius/capish:latest -f services/capish/Dockerfile .
+# Build: docker build -t yuvadius/capish:latest -f services/capish/Dockerfile .
 # docker push yuvadius/capish:latest
 # docker run -p 8081:8081 -e ENV=local yuvadius/capish:latest
 
 # Use the official lightweight Node.js image.
 # https://hub.docker.com/_/node
-FROM node:24.0.1-slim
+FROM --platform=linux/arm64 node:24.0.1-slim
 
 # Set up the workspace directory and cd into it
 WORKDIR /usr/workspace
