Run github actions on arm64

--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   terraform-plan:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-arm64
 
     permissions:
       contents: read
