--- a/.github/actions/aws-warm-up/action.yml
+++ b/.github/actions/aws-warm-up/action.yml
@@ -17,7 +17,7 @@ runs:
 
     - name: Download Helmfile
       run: |
-        wget -q https://github.com/helmfile/helmfile/releases/download/v0.168.0/helmfile_0.168.0_linux_amd64.tar.gz
+        wget -q https://github.com/helmfile/helmfile/releases/download/v0.168.0/helmfile_0.168.0_linux_arm64.tar.gz
         tar xzf helmfile_0.168.0_linux_amd64.tar.gz
         sudo mv helmfile /usr/local/bin/
       shell: bash
