--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -19,7 +19,7 @@ concurrency:
 
 jobs:
   terraform-apply:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-arm64
 
     permissions:
       contents: read
