--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   terraform-plan:
-    runs-on: ubuntu-latest-arm64
+    runs-on: ubuntu-24.04-arm
 
     permissions:
       contents: read
