--- a/.github/workflows/type-check.yml
+++ b/.github/workflows/type-check.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   type-check:
-    runs-on: ubuntu-latest-arm64
+    runs-on: ubuntu-24.04-arm
 
     permissions:
       contents: read
