--- a/kubernetes/postgresql/values/defaults.yaml
+++ b/kubernetes/postgresql/values/defaults.yaml
@@ -13,8 +13,8 @@ postgresql:
   primary:
     persistence:
       enabled: true
-      storageClass: gp2
-      size: 8Gi
+      storageClass: gp3-postgresql
+      size: 2Gi
     resources:
       requests:
         memory: 256Mi
