--- a/kubernetes/ingress-controller/values/defaults.yaml
+++ b/kubernetes/ingress-controller/values/defaults.yaml
@@ -27,6 +27,7 @@ ingress-nginx:
       annotations:
         service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
         service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
+        service.beta.kubernetes.io/aws-load-balancer-subnets: "subnet-02a3fb65864cb921f" # Use only us-east-1a subnet to avoid extra ip costs
         service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-1:384389382109:certificate/638c9faa-d42c-47af-b25f-5cf363c17945"
         service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
         service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
