--- a/services/cannon/envs/default.env
+++ b/services/cannon/envs/default.env
@@ -1,9 +1,10 @@
 PORT=8082
+CLUSTER_NAME=postrix
 
 ELASTICSEARCH_USERNAME=elastic
-ELASTICSEARCH_PASSWORD=/secrets/elasticsearch/password
-REDIS_PASSWORD=/secrets/redis/password
-POSTGRES_USERNAME=/secrets/postgres/username
-POSTGRES_PASSWORD=/secrets/postgres/password
-POSTGRES_HOST=/secrets/postgres/host
-POSTGRES_PORT=/secrets/postgres/port
+ELASTICSEARCH_PASSWORD=/k8s-secrets/elastic/elasticsearch-auth/elasticsearch-password
+REDIS_PASSWORD=/k8s-secrets/redis/redis-auth/redis-password
+POSTGRES_USERNAME=postgres
+POSTGRES_PASSWORD=/k8s-secrets/postgresql/postgresql-auth/postgresql-password
+POSTGRES_HOST=postgresql.postrix.io
+POSTGRES_PORT=5432
