--- a/services/capish/envs/default.env
+++ b/services/capish/envs/default.env
@@ -1,9 +1,10 @@
 PORT=8081
+CLUSTER_NAME=postrix
 
 ELASTICSEARCH_USERNAME=elastic
-ELASTICSEARCH_PASSWORD=/secrets/elasticsearch/password
-REDIS_PASSWORD=/secrets/redis/password
-WHATSAPP_ACCESS_TOKEN=/secrets/capish-whatsapp-api/access_token
-WHATSAPP_PHONE_ID=/secrets/capish-whatsapp-api/phone_id
-CREATOMATE_API_KEY=/secrets/creatomate/api_key
-CREATOMATE_API_KEY_TRIAL=/secrets/creatomate/api_key_trial
+ELASTICSEARCH_PASSWORD=/k8s-secrets/elastic/elasticsearch-auth/elasticsearch-password
+REDIS_PASSWORD=/k8s-secrets/redis/redis-auth/redis-password
+WHATSAPP_ACCESS_TOKEN=/k8s-secrets/capish-whatsapp-api/capish-whatsapp-api-auth/capish-whatsapp-api-access-token
+WHATSAPP_PHONE_ID=/k8s-secrets/capish-whatsapp-api/capish-whatsapp-api-auth/capish-whatsapp-api-phone-id
+CREATOMATE_API_KEY=/k8s-secrets/creatomate/creatomate-auth/creatomate-api-key
+CREATOMATE_API_KEY_TRIAL=/k8s-secrets/creatomate/creatomate-auth/creatomate-api-key-trial
