--- a/services/joby/envs/default.env
+++ b/services/joby/envs/default.env
@@ -1,5 +1,6 @@
 PORT=8080
+CLUSTER_NAME=postrix
 
 ELASTICSEARCH_USERNAME=elastic
-ELASTICSEARCH_PASSWORD=/secrets/elasticsearch/password
-REDIS_PASSWORD=/secrets/redis/password
+ELASTICSEARCH_PASSWORD=/k8s-secrets/elastic/elasticsearch-auth/elasticsearch-password
+REDIS_PASSWORD=/k8s-secrets/redis/redis-auth/redis-password
