--- a/kubernetes/common/templates/cluster-role-binding.yaml
+++ b/kubernetes/common/templates/cluster-role-binding.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ .Release.Name }}-secret-reader-binding
+  name: {{ .Release.Name }}-{{ .Release.Namespace }}-secret-reader-binding
 subjects:
 - kind: ServiceAccount
   name: {{ .Release.Name }}
   namespace: {{ .Release.Namespace }}
 roleRef:
   kind: ClusterRole
-  name: {{ .Release.Name }}-secret-reader
+  name: {{ .Release.Name }}-{{ .Release.Namespace }}-secret-reader
   apiGroup: rbac.authorization.k8s.io 
