--- a/kubernetes/common/templates/role.yaml
+++ b/kubernetes/common/templates/role.yaml
@@ -1,7 +1,8 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
+kind: Role
 metadata:
-  name: {{ .Release.Name }}-{{ .Release.Namespace }}-secret-reader
+  name: secret-reader
+  namespace: {{ .Release.Namespace }}
 rules:
 - apiGroups: [""]
   resources: ["secrets"]
