--- a/kubernetes/common/templates/cluster-role-binding.yaml
+++ b/kubernetes/common/templates/cluster-role-binding.yaml
@@ -1,13 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
   name: secret-reader-binding
-  namespace: {{ .Release.Namespace }}
 subjects:
 - kind: ServiceAccount
   name: {{ .Release.Name }}
   namespace: {{ .Release.Namespace }}
 roleRef:
-  kind: Role
+  kind: ClusterRole
   name: secret-reader
   apiGroup: rbac.authorization.k8s.io
