--- a/kubernetes/common/templates/cluster-role-binding.yaml
+++ b/kubernetes/common/templates/cluster-role-binding.yaml
@@ -8,5 +8,5 @@ subjects:
   namespace: {{ .Release.Namespace }}
 roleRef:
   kind: ClusterRole
-  name: secret-reader
+  name: secret-reader-{{ .Release.Name }}-{{ .Release.Namespace }}
   apiGroup: rbac.authorization.k8s.io
