--- a/kubernetes/rbac/templates/cluster-role.yaml
+++ b/kubernetes/rbac/templates/cluster-role.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: secret-reader-{{ .Release.Name }}-{{ .Release.Namespace }}
+  name: secret-reader
 rules:
 - apiGroups: [""]
   resources: ["secrets"]
