--- a/kubernetes/rbac/templates/cluster-role.yaml
+++ b/kubernetes/rbac/templates/cluster-role.yaml
@@ -1,3 +1,5 @@
+# Add permission to read secrets in all namespaces for all service accounts
+# This is needed so that our pods will be able to read secrets in all namespaces
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
