--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -59,10 +59,9 @@ jobs:
         run: |
           if kubectl get namespace "${{ steps.repo_warm_up.outputs.namespace }}" -o jsonpath='{.metadata.labels.environment}' --ignore-not-found | grep -q "adhoc"; then
             # Delete all helm releases in the namespace
-            # TODO: I think i need to install helm here
             helm list -n "${{ steps.repo_warm_up.outputs.namespace }}" -q | xargs -r helm uninstall -n "${{ steps.repo_warm_up.outputs.namespace }}"
 
-            # kubectl delete namespace "${{ steps.repo_warm_up.outputs.namespace }}" --ignore-not-found
+            kubectl delete namespace "${{ steps.repo_warm_up.outputs.namespace }}" --ignore-not-found
           fi
 
       - name: Delete all expired adhoc environments
@@ -72,7 +71,6 @@ jobs:
           
           for namespace in $ADHOC_NAMESPACES; do
             # Delete all helm releases in the namespace
-            # TODO: I think i need to install helm here
             helm list -n $namespace -q | xargs -r helm uninstall -n $namespace
             
             kubectl delete namespace $namespace
