--- a/kubernetes/helmfile.yaml
+++ b/kubernetes/helmfile.yaml
@@ -56,6 +56,7 @@ releases:
     values:
       - ./ingress-controller/values/defaults.yaml
 
+  # Currently not installed since no need for scaling
   - name: cluster-autoscaler
     namespace: kube-system
     chart: autoscaler/cluster-autoscaler
