--- a/packages/redis/package.json
+++ b/packages/redis/package.json
@@ -9,6 +9,6 @@
     "test": "jest --config ../../jest.config.mjs --rootDir ./"
   },
   "dependencies": {
-    "redis": "^5.0.0"
+    "ioredis": "^5.6.1"
   }
 }
