--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -76,7 +76,7 @@ jobs:
             kubectl delete namespace $namespace
           done
 
-      - name: Delete PostgreSQL namespace schema
+      - name: Delete PostgreSQL schemas without namespace
         if: github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch'
         run: |
           # Get list of all databases except system databases
@@ -84,11 +84,16 @@ jobs:
           
           # Delete schema from all databases
           for db in $DATABASES; do
-            echo "Cleaning up schema in database: $db"
-            kubectl exec -n postgresql postgresql-0 -- bash -c "PGPASSWORD='${{ secrets.DATABASE_INSTANCE_PASSWORD }}' psql -U postgres -d '$db' -c \"DROP SCHEMA IF EXISTS \\\"${{ steps.repo_warm_up.outputs.namespace }}\\\" CASCADE;\""
-          done
+            # Get list of all schemas in the database
+            SCHEMAS=$(kubectl exec -n postgresql postgresql-0 -- bash -c "PGPASSWORD='${{ secrets.DATABASE_INSTANCE_PASSWORD }}' psql -U postgres -At -d '$db' -c \"SELECT schema_name FROM information_schema.schemata WHERE schema_name LIKE '%-adhoc';\"")
 
-      # TODO: Add a step to delete the expired schemas if we missed any
+            for schema in $SCHEMAS; do
+              if ! kubectl get namespace "$schema" >/dev/null 2>&1; then
+                echo "Cleaning up orphaned schema '$schema' in database: $db"
+                kubectl exec -n postgresql postgresql-0 -- bash -c "PGPASSWORD='${{ secrets.DATABASE_INSTANCE_PASSWORD }}' psql -U postgres -d '$db' -c \"DROP SCHEMA IF EXISTS \\\"$schema\\\" CASCADE;\""
+              fi
+            done
+          done
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
