--- a/services/capish/Dockerfile
+++ b/services/capish/Dockerfile
@@ -22,4 +22,4 @@ COPY packages packages/
 RUN npm ci --omit=dev
 
 # Start the application
-CMD ["npm", "--prefix=services/capish", "run", "start:server"]
+CMD ["npm", "--prefix=services/capish", "run", "start"]
