--- a/packages/file-system/package.json
+++ b/packages/file-system/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.802.0",
-    "@aws-sdk/credential-providers": "^3.799.0"
+    "@aws-sdk/credential-providers": "^3.799.0",
+    "logger": "file:../logger"
   }
 }
