--- a/packages/whatsapp/package.json
+++ b/packages/whatsapp/package.json
@@ -9,7 +9,8 @@
     "test": "jest --config ../../jest.config.mjs --rootDir ./"
   },
   "dependencies": {
-    "file-system": "file:../file-system"
+    "file-system": "file:../file-system",
+    "logger": "file:../logger"
   },
   "devDependencies": {
     "@types/express": "^5.0.1"
