--- a/services/cannon/package.json
+++ b/services/cannon/package.json
@@ -6,14 +6,14 @@
   "main": "src/index.ts",
   "scripts": {
     "type-check": "tsc --noEmit",
-    "start:local": "ENV=local node --watch src/index.ts",
-    "start:server": "node src/index.ts",
+    "start": "node src/index.ts",
     "test": "jest --config ../../jest.config.mjs --rootDir ./"
   },
   "dependencies": {
     "cannon-db": "file:../../packages/cannon-db",
     "env-loader": "file:../../packages/env-loader",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "logger": "file:../../packages/logger"
   },
   "devDependencies": {
     "@types/pg": "^8.11.11"
