--- a/services/capish/package.json
+++ b/services/capish/package.json
@@ -6,8 +6,7 @@
   "main": "src/index.ts",
   "scripts": {
     "type-check": "tsc --noEmit",
-    "start:local": "ENV=local node --watch src/index.ts",
-    "start:server": "node src/index.ts",
+    "start": "node src/index.ts",
     "test": "jest --config ../../jest.config.mjs --rootDir ./"
   },
   "dependencies": {
@@ -16,6 +15,7 @@
     "env-loader": "file:../../packages/env-loader",
     "express": "^4.18.2",
     "file-system": "file:../../packages/file-system",
+    "logger": "file:../../packages/logger",
     "secret-manager": "file:../../packages/secret-manager",
     "whatsapp": "file:../../packages/whatsapp"
   },
