--- a/packages/redis/package.json
+++ b/packages/redis/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "ioredis": "^5.6.1",
-    "logger": "file:../logger"
+    "logger": "file:../logger",
+    "secret-manager": "file:../secret-manager"
   }
 }
