--- a/services/joby/Dockerfile
+++ b/services/joby/Dockerfile
@@ -18,7 +18,7 @@ COPY services/joby services/joby/
 # Copy all packages
 COPY packages packages/
 
-# Install dependencies
+# Install dependencies that are only used by the service or its dependencies
 RUN npm ci --workspace=joby --omit=dev
 
 # Start the application
