--- a/kubernetes/elasticsearch/values/defaults.yaml
+++ b/kubernetes/elasticsearch/values/defaults.yaml
@@ -7,10 +7,10 @@ elasticsearch:
     resources:
       limits:
         cpu: 1000m
-        memory: 4Gi
+        memory: 1500Mi
       requests:
         cpu: 100m
-        memory: 1Gi
+        memory: 750Mi
     persistence:
       enabled: true
       storageClass: gp3-elasticsearch
@@ -66,10 +66,10 @@ elasticsearch:
     resources:
       limits:
         cpu: 1000m
-        memory: 2Gi
+        memory: 1500Mi
       requests:
         cpu: 100m
-        memory: 1Gi
+        memory: 750Mi
         
     persistence:
       enabled: true
