--- a/kubernetes/redis/values/defaults.yaml
+++ b/kubernetes/redis/values/defaults.yaml
@@ -11,11 +11,11 @@ redis:
       port: 6379
     resources:
       requests:
-        cpu: "100m"
-        memory: "128Mi"
+        cpu: 100m
+        memory: 50Mi
       limits:
-        cpu: "150m"
-        memory: "192Mi"
+        cpu: 150m
+        memory: 200Mi
 
   auth:
     enabled: true
