--- a/services/whatsapp/envs/default.env
+++ b/services/whatsapp/envs/default.env
@@ -9,3 +9,4 @@ CAPISH_WHATSAPP_PHONE_ID=/k8s-secrets/secrets/whatsapp-api-auth/capish-whatsapp-
 JOBY_WHATSAPP_PHONE_ID=/k8s-secrets/secrets/whatsapp-api-auth/joby-whatsapp-api-phone-id
 CREATOMATE_API_KEY=/k8s-secrets/secrets/creatomate-auth/creatomate-api-key
 CREATOMATE_API_KEY_TRIAL=/k8s-secrets/secrets/creatomate-auth/creatomate-api-key-trial
+OPENAI_TOKEN=/k8s-secrets/secrets/openai-auth/openai-token
