--- a/services/whatsapp/package.json
+++ b/services/whatsapp/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "file-system": "file:../../packages/file-system",
     "logger": "file:../../packages/logger",
+    "openai": "^5.7.0",
     "secret-manager": "file:../../packages/secret-manager",
     "whatsapp-utils": "file:../../packages/whatsapp-utils"
   },
