--- a/services/whatsapp/envs/default.env
+++ b/services/whatsapp/envs/default.env
@@ -10,3 +10,4 @@ JOBY_WHATSAPP_PHONE_ID=/k8s-secrets/secrets/whatsapp-api-auth/joby-whatsapp-api-
 CREATOMATE_API_KEY=/k8s-secrets/secrets/creatomate-auth/creatomate-api-key
 CREATOMATE_API_KEY_TRIAL=/k8s-secrets/secrets/creatomate-auth/creatomate-api-key-trial
 OPENAI_TOKEN=/k8s-secrets/secrets/openai-auth/openai-token
+LINKEDIN_API_KEY=/k8s-secrets/secrets/rapid-linkedin-auth/linkedin-api-key
